# fourier-series

./: .gitignore  LICENSE  README.md  setup.py
core/: CMakeLists.txt
core/fourier_series/: fourier_series.cpp  fourier_series.h
src/: __init__.py  methods.py
tests/: test_fourier_series.py
